# GoLive

./: .gitignore  CMakeLists.txt  CameraManager.cpp  CameraManager.h  CameraSelectionDialog.cpp  CameraSelectionDialog.h  Info.plist  MainWindow.cpp  MainWindow.h  mainwindow.ui  resources.qrc
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
effects/God01/Backgrounds/: GOD (13).json  GOD (38).json  GOD (5).json  GOD (71).json  GOD (83).json  GOD (87).json  dg202.json  gd (11).json  gd (2).json  gd (3).json  gd (6).json  gd (9).json
effects/God01/Frames/: GOD (1).json  GOD (6).json  GOD (72).json  GOD (95).json  durgagod7.json  gd (1).json  gd (12).json  gd (15).json
effects/God01/Overlays/: GOD (34).json
effects/Muslim/Modern/: FR-ONM (7).json
effects/Stage/Backdrops/: 15aug (10).json  15aug (5).json
include/: CameraManager.h  CameraSelectionDialog.h  EffectsManager.h  ExternalMonitorWindow.h  MainWindow.h  MediaSelectionDialog.h  NativeCamera.h  RecordingManager.h  RecordingSettingsDialog.h  SettingsDialog.h  StreamingManager.h  StreamingSettingsDialog.h  TextOverlaySettingsDialog.h  VideoRecorder.h
src/: CameraManager.cpp  CameraSelectionDialog.cpp  EffectsManager.cpp  MainWindow.cpp  MediaSelectionDialog.cpp  NativeCamera.cpp  NativeCamera.mm  RecordingManager.cpp  RecordingSettingsDialog.cpp  SettingsDialog.cpp  StreamingManager.cpp  VideoRecorder.cpp  VideoRecorder.mm  mainwindow.ui
